refactor: StringUtils 생성