@@ -4,6 +4,7 @@ import gift.advisor.SimpleLogWithTimeAdvisor;
 import gift.dto.PresentRequest;
 import gift.dto.PresentResponse;
 import gift.utils.SessionIdGenerator;
+import gift.utils.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.ai.chat.client.ChatClient;
@@ -37,7 +38,7 @@ public class PresentChatService {
 
     public PresentResponse chat(PresentRequest request) {
         var message = request.message();
-        var sessionId = (request.sessionId() == null || request.sessionId().isBlank()) ? SessionIdGenerator.generate() : request.sessionId();
+        var sessionId = StringUtils.isBlank(request.sessionId()) ? SessionIdGenerator.generate() : request.sessionId();
 
         try {
             var response = chatClient.prompt()
